GCC Bugzilla – Bug 15578
gcj doesn't support -extdirs
Last modified: 2004-10-13 17:05:54 UTC
gcj supports --extdirs, but not -extdirs (single dash). This is needed if "gcj -C" is going to be compatible with "javac", which has been a longstanding goal.
Confirmed.
Right now if I use "--extdirs foo" I get an error: opsy. gcj --syntax-only --extdirs lib -Isrc src/org/jacorb/config/Configuration.java jc1: error: unrecognized command line option "-fextdirs" However, if I use --extdirs=lib, it works.
Testing a patch.
Patch here: <http://gcc.gnu.org/ml/gcc-patches/2004-09/msg02420.html>.
Subject: Bug 15578 CVSROOT: /cvs/gcc Module name: gcc Changes by: tromey@gcc.gnu.org 2004-10-13 17:03:58 Modified files: gcc : ChangeLog gcc.c Log message: PR java/15578: * gcc.c (option_map): Added --extdirs and --encoding. Patches: http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.5861&r2=2.5862 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/gcc.c.diff?cvsroot=gcc&r1=1.435&r2=1.436
Subject: Bug 15578 CVSROOT: /cvs/gcc Module name: gcc Changes by: tromey@gcc.gnu.org 2004-10-13 17:04:58 Modified files: gcc/java : ChangeLog lang.opt jvspec.c Log message: PR java/15578: * lang.opt (--extdirs): Document. * jvspec.c (lang_specific_driver): Recognize -encoding and -extdirs. Patches: http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java/ChangeLog.diff?cvsroot=gcc&r1=1.1482&r2=1.1483 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java/lang.opt.diff?cvsroot=gcc&r1=1.10&r2=1.11 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java/jvspec.c.diff?cvsroot=gcc&r1=1.66&r2=1.67
Fix checked in.