	PR java/15578: 	* lang.opt (--extdirs): Document. 	* jvspec.c (lang_specific_driver): Recognize -encoding and 	-extdirs.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@88991 138bc75d-0d04-0410-961f-82ee72b054a4