gcc/java/jvspec.c
@@ -1,6 +1,6 @@
 /* Specific flags and argument handling of the front-end of the 
    GNU compiler for the Java(TM) language.
-   Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003
+   Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004
    Free Software Foundation, Inc.
 
 This file is part of GCC.
@@ -324,9 +324,11 @@ lang_specific_driver (int *in_argc, const char *const **in_argv,
 		saw_o = 1;
 	      quote = argv[i];
 	    }
-	  else if (strcmp(argv[i], "-classpath") == 0
-		   || strcmp(argv[i], "-bootclasspath") == 0
-		   || strcmp(argv[i], "-CLASSPATH") == 0)
+	  else if (strcmp (argv[i], "-classpath") == 0
+		   || strcmp (argv[i], "-bootclasspath") == 0
+		   || strcmp (argv[i], "-CLASSPATH") == 0
+		   || strcmp (argv[i], "-encoding") == 0
+		   || strcmp (argv[i], "-extdirs") == 0)
 	    {
 	      quote = argv[i];
 	      added -= 1;
@@ -507,7 +509,9 @@ lang_specific_driver (int *in_argc, const char *const **in_argv,
 
       if (strcmp (argv[i], "-classpath") == 0
 	  || strcmp (argv[i], "-bootclasspath") == 0
-	  || strcmp (argv[i], "-CLASSPATH") == 0)
+	  || strcmp (argv[i], "-CLASSPATH") == 0
+	  || strcmp (argv[i], "-encoding") == 0
+	  || strcmp (argv[i], "-extdirs") == 0)
 	{
 	  arglist[j] = concat ("-f", argv[i]+1, "=", argv[i+1], NULL);
 	  i++;
